--- a/index.css
+++ b/index.css
@@ -3,347 +3,353 @@
 *,
 *:before,
 *:after {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 html,
 body {
-    margin: 0;
-    padding: 0;
-    font-family: sans-serif;
+  margin: 0;
+  padding: 0;
+  font-family: sans-serif;
 }
 
 body {
-    margin-top: 100px;
-    margin-bottom: 15vh;
-    padding-right: 20%;
-    text-align: center;
+  margin-top: 100px;
+  margin-bottom: 15vh;
+  padding-right: 20%;
+  text-align: center;
 }
 
 a {
-    text-decoration: none;
+  text-decoration: none;
 }
 
 h3 {
-    position: relative;
+  position: relative;
 }
 
 h3 span {
-    position: absolute;
-    top: -100px;
+  position: absolute;
+  top: -100px;
 }
 
 /* #################### Header Elements #################### */
 
 header,
 #nav {
-    display: flex;
-    justify-content: center;
-    flex-direction: row;
+  display: flex;
+  justify-content: center;
+  flex-direction: row;
 }
 
 header {
-    position: fixed;
-    left: 0;
-    top: 0;
+  position: fixed;
+  left: 0;
+  top: 0;
 
-    z-index: 100;
+  z-index: 100;
 
-    width: 100%;
+  width: 100%;
 
-    background-color: white;
-    border-bottom: 5px solid #606060;
-
+  background-color: white;
+  border-bottom: 5px solid #606060;
 }
 
 ul#nav {
-    /* zorg dat de nav list de hele header vult */
-    flex: 1;
-    flex-direction: row;
+  /* zorg dat de nav list de hele header vult */
+  flex: 1;
+  flex-direction: row;
 
-    list-style: none;
-    margin: 0;
-    padding: 0;
+  list-style: none;
+  margin: 0;
+  padding: 0;
 }
 
-ul#nav>li>a {
-    /* anchor tags (<a>) hebben by default geen width/height attributes dus die moet je eerst als 'block' displayen.*/
-    display: block;
-    min-width: 200px;
-    padding: 20px;
-    /* 24px */
-    font-size: 1.5rem;
+ul#nav > li > a {
+  /* anchor tags (<a>) hebben by default geen width/height attributes dus die moet je eerst als 'block' displayen.*/
+  display: block;
+  min-width: 200px;
+  padding: 20px;
+  /* 24px */
+  font-size: 1.5rem;
 }
 
-ul#nav>li:first-child {
-    /* zorg dat het eerste item in de nav list de remaining space van de navlist vult (dan plaatst hij de andere items naar rechts) */
-    flex: 1;
-    text-align: left;
+ul#nav > li:first-child {
+  /* zorg dat het eerste item in de nav list de remaining space van de navlist vult (dan plaatst hij de andere items naar rechts) */
+  flex: 1;
+  text-align: left;
 }
 
 /* #################### Footer Elements #################### */
 
 footer,
-#footer {
-    display: flex;
-    justify-content: center;
-    flex-direction: row;
+#footer-content {
+  display: flex;
+  justify-content: center;
+  flex-direction: row;
 }
 
 footer {
-    position: fixed;
-    left: 0;
-    bottom: 0;
+  position: fixed;
+  left: 0;
+  bottom: 0;
 
-    z-index: 100;
+  z-index: 100;
 
-    width: 100%;
+  width: 100%;
 
-    background-color: white;
-    border-top: 5px solid #606060;
-
+  background-color: white;
+  border-top: 5px solid #606060;
 }
 
-ul#footer {
-    /* zorg dat de nav list de hele footer vult */
-    flex: 1;
-    flex-direction: row;
+ul#footer-content {
+  /* zorg dat de nav list de hele footer vult */
+  flex: 1;
+  flex-direction: row;
 
-    list-style: none;
-    margin: 0;
-    padding: 0;
+  list-style: none;
+  margin: 0;
+  padding: 0;
 }
 
-ul#footer>li>a {
-    /* anchor tags (<a>) hebben by default geen width/height attributes dus die moet je eerst als 'block' displayen.*/
-    display: block;
+ul#footer-content > li > a {
+  /* anchor tags (<a>) hebben by default geen width/height attributes dus die moet je eerst als 'block' displayen.*/
+  display: block;
 
-    padding-top: 20px;
-    padding-bottom: 20px;
-    /* 24px */
-    font-size: 1rem;
-
+  padding-top: 20px;
+  padding-bottom: 20px;
+  /* 24px */
+  font-size: 1rem;
 }
 
-ul#footer>li:last-child,li:nth-child(5),li:nth-child(6) {
-    min-width: 170px;
-    text-align: center;
+ul#footer-content .social-link {
+  width: 170px;
+  text-align: center;
 }
 
-ul#footer>li:first-child,li:nth-child(2),li:nth-child(3),li:nth-child(4) {
-    /* zorg dat het eerste item in de nav list de remaining space van de navlist vult (dan plaatst hij de andere items naar rechts) */
-    flex: 1;
-    text-align: left;
+ul#footer-content > li:not(.social-link) {
+  /* zorg dat het eerste item in de nav list de remaining space van de navlist vult (dan plaatst hij de andere items naar rechts) */
+  flex: 1;
+  text-align: left;
 }
 
 .footercolumn {
-    float: left;
-    width: 50%;
-    padding: 10px;
+  float: left;
+  width: 50%;
+  padding: 10px;
 }
 .footercol:after {
-    content: "";
-    display: table;
-    clear: both;
+  content: "";
+  display: table;
+  clear: both;
 }
 
 /* #################### Agenda #################### */
 
 .agenda {
-    position: fixed;
-    right: 0;
+  position: fixed;
+  right: 0;
 
-    width: 20%;
-    top: 15%;
-    height: 70%;
-    box-sizing: border-box;
+  width: 20%;
+  top: 15%;
+  height: 70%;
+  box-sizing: border-box;
 
-    background-color: white;
-    border: 5px solid #363636;
-    border-radius: 10px;
+  background-color: white;
+  border: 5px solid #363636;
+  border-radius: 10px;
 
-    text-align: center;
+  text-align: center;
 }
 
 /* #################### Iframe Player #################### */
 
 main {
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
 }
 
 #container {
-    width: 425px;
-    height: 40px;
-    overflow: hidden;
-    margin: auto;
+  width: 425px;
+  height: 40px;
+  overflow: hidden;
+  margin: auto;
 }
 
 #embed {
-    width: 1920px;
-    height: 1080px;
-    overflow: hidden;
-    margin-top: -401px;
-    margin-left: -739px;
+  width: 1920px;
+  height: 1080px;
+  overflow: hidden;
+  margin-top: -401px;
+  margin-left: -739px;
 }
 
-#fotoboek>img {
-    width: 200px;
-    height: 300px;
-    object-fit: cover;
+#fotoboek > img {
+  width: 200px;
+  height: 300px;
+  object-fit: cover;
 }
 
 /* #################### Smooth Scroll #################### */
 
 html {
-    scroll-behavior: smooth;
+  scroll-behavior: smooth;
 }
 
 :target:before {
-    content: "";
-    display: block;
-    /* height: 100px; */
-    /* margin: -100sdpx 0 0; */
+  content: "";
+  display: block;
+  /* height: 100px; */
+  /* margin: -100sdpx 0 0; */
 }
 
 /* #################### Fotoboek #################### */
 
-* {box-sizing:border-box}
+* {
+  box-sizing: border-box;
+}
 
 /* Slideshow container */
 .slideshow-container {
-    max-width: 1000px;
-    position: relative;
-    margin: auto;
+  max-width: 1000px;
+  position: relative;
+  margin: auto;
 }
 
 /* Hide the images by default */
 .mySlides {
-    display: none;
+  display: none;
 }
 
 /* Next & previous buttons */
-.prev, .next {
-    cursor: pointer;
-    position: absolute;
-    top: 50%;
-    width: auto;
-    margin-top: -22px;
-    padding: 16px;
-    color: #717171;
-    font-weight: bold;
-    font-size: 18px;
-    transition: 0.6s ease;
-    border-radius: 0 3px 3px 0;
-    user-select: none;
+.prev,
+.next {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  margin-top: -22px;
+  padding: 16px;
+  color: #717171;
+  font-weight: bold;
+  font-size: 18px;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
 }
 
 /* Position the "next button" to the right */
 .next {
-    right: 0;
-    border-radius: 3px 0 0 3px;
+  right: 0;
+  border-radius: 3px 0 0 3px;
 }
 
 .prev {
-    left: 0;
+  left: 0;
 }
 
 /* On hover, add a black background color with a little bit see-through */
-.prev:hover, .next:hover {
-    background-color: rgba(0,0,0,0.8);
+.prev:hover,
+.next:hover {
+  background-color: rgba(0, 0, 0, 0.8);
 }
 
 /* Caption text */
 .text {
-    color: #363636;
-    font-size: 15px;
-    position: absolute;
-    bottom: 8px;
-    width: 100%;
-    text-align: center;
+  color: #363636;
+  font-size: 15px;
+  position: absolute;
+  bottom: 8px;
+  width: 100%;
+  text-align: center;
 }
 
 /* Number text (1/3 etc) */
 .numbertext {
-    left: 48.5%;
-    color: #363636;
-    font-size: 12px;
-    position: absolute;
-    top: -15px;
+  left: 48.5%;
+  color: #363636;
+  font-size: 12px;
+  position: absolute;
+  top: -15px;
 }
 
 /* The dots/bullets/indicators */
 .dot {
-    cursor: pointer;
-    height: 15px;
-    width: 15px;
-    margin: 0 2px;
-    background-color: #bbb;
-    border-radius: 50%;
-    display: inline-block;
-    transition: background-color 0.6s ease;
+  cursor: pointer;
+  height: 15px;
+  width: 15px;
+  margin: 0 2px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.6s ease;
 }
 
-.active, .dot:hover {
-    background-color: #717171;
+.active,
+.dot:hover {
+  background-color: #717171;
 }
 
 /* Fading animation */
 .fade {
-    animation-name: fade;
-    animation-duration: 1.5s;
+  animation-name: fade;
+  animation-duration: 1.5s;
 }
 
 @keyframes fade {
-    from {opacity: .4}
-    to {opacity: 1}
+  from {
+    opacity: 0.4;
+  }
+  to {
+    opacity: 1;
+  }
 }
 
 /* #################### Columns #################### */
 
 /* Create two equal columns that floats next to each other */
 .overonscolumn {
-    float: left;
-    width: 50%;
-    padding: 10px;
+  float: left;
+  width: 50%;
+  padding: 10px;
 }
 
 .vriendencolumn {
-    float: left;
-    width: 33.33%;
-    width: calc(100% / 3);
-    padding: 10px;
-    margin-bottom: 15px;
+  float: left;
+  width: 33.33%;
+  width: calc(100% / 3);
+  padding: 10px;
+  margin-bottom: 15px;
 }
-  
+
 /* Clear floats after the columns */
 .overonscol:after {
-    content: "";
-    display: table;
-    clear: both;
+  content: "";
+  display: table;
+  clear: both;
 }
 
 .vriendencol:after {
-    content: "";
-    display: table;
-    clear: both;
+  content: "";
+  display: table;
+  clear: both;
 }
 
 /* #################### Vrienden van DanceXperience #################### */
 
 .vriendenfotos {
-    height: 250px; 
-    width: auto; 
-    margin-top: -32px; 
-    border: solid #363636 3px; 
-    border-radius: 10px;
+  height: 250px;
+  width: auto;
+  margin-top: -32px;
+  border: solid #363636 3px;
+  border-radius: 10px;
 }
 
 .vriendenfotosborder {
-    border: solid #363636 3px;
-    width: 300px;
-    border-radius: 10px;
-    margin-left: 94px;
-    margin-right: 94px;
+  border: solid #363636 3px;
+  width: 300px;
+  border-radius: 10px;
+  margin-left: 94px;
+  margin-right: 94px;
 }
