change italic to normal for safari

--- a/src/lib/styles/typography.scss
+++ b/src/lib/styles/typography.scss
@@ -2,7 +2,7 @@
         font-family: Excluded;
         src: url('/assets/fonts/Excluded-Italic.woff') format('woff');
         font-weight: bold;
-        font-style: italic;
+        font-style: normal;
 }
 
 :root {
