--- a/src/lib/styles/colors.scss
+++ b/src/lib/styles/colors.scss
@@ -1,39 +1,95 @@
-:root {
-	--color-primary: #fff;
-	--color-secondary: #000;
-	--color-tertiary: #fff; /* unused */
-	--color-quaternary: #fff; /* unused */
-	--color-quinary: #fff; /* unused */
+@use './_theme' as *;
+
+*,
+*::before,
+*::after {
+	transition: background-color 150ms ease-out, color 150ms ease-out;
 }
 
-.day {
-	--clr-bg: var(--color-primary);
-	--clr-text: var(--color-secondary);
+body {
+	background-color: var(--background-primary);
+	color: var(--text-primary);
 }
 
-.night {
-	--clr-bg: var(--color-secondary);
-	--clr-text: var(--color-primary);
+.clr-text-primary {
+	color: var(--text-primary);
 }
 
-@media (prefers-color-scheme: dark) {
-	.day.dark-scheme {
-		background: #333;
-		color: white;
-	}
-	.night.dark-scheme {
-		background: black;
-		color: #ddd;
-	}
+.clr-text-secondary {
+	color: var(--text-secondary);
 }
 
-@media (prefers-color-scheme: light) {
-	.day.light-scheme {
-		background: white;
-		color: #555;
-	}
-	.night.light-scheme {
-		background: #eee;
-		color: black;
-	}
+.clr-text-inactive {
+	color: var(--text-inactive);
+}
+
+.clr-text-invert {
+	color: var(--text-invert);
+}
+
+a:not(.clr-text-primary) {
+	color: var(--text-link-primary-default);
+}
+
+a:not(.clr-text-primary):hover {
+	color: var(--text-link-primary-hover);
+}
+
+a:not(.clr-text-primary):active {
+	color: var(--text-link-primary-active);
+}
+
+:is(.clr-text-link-secondary, .clr-text-link-secondary > a) {
+	color: var(--text-link-secondary-default);
+}
+
+:is(.clr-text-link-secondary, .clr-text-link-secondary > a):hover {
+	color: var(--text-link-secondary-hover);
+}
+
+:is(.clr-text-link-secondary, .clr-text-link-secondary > a):active {
+	color: var(--text-link-secondary-active);
+}
+
+.clr-bg-primary {
+	background-color: var(--background-primary);
+}
+
+.clr-bg-secondary {
+	background-color: var(--background-secondary);
+}
+
+.clr-bg-tertiary {
+	background-color: var(--background-tertiary);
+}
+
+.clr-bg-info {
+	background-color: var(--background-information);
+}
+
+.clr-bg-warning {
+	background-color: var(--background-warning);
+}
+
+.clr-bg-critical {
+	background-color: var(--background-critical);
+}
+
+.clr-bg-success {
+	background-color: var(--background-success);
+}
+
+.clr-border {
+	border-color: var(--border-primary);
+}
+
+.clr-border-secondary {
+	border-color: var(--border-secondary);
+}
+
+button {
+	@apply flex justify-center items-center;
+	@apply rounded;
+	background-color: var(--button-primary-default);
+	color: var(--text-invert);
 }
