refactor styles dir structure

--- a/src/lib/styles/ui/base/_themes.scss
+++ b/src/lib/styles/ui/base/_themes.scss
@@ -1,5 +1,5 @@
 @use 'sass:color';
-@use './_color-palette' as *;
+@use '$lib/styles/ui/color-palette.scss' as *;
 
 @mixin light-theme {
 	--text-primary: #{$dx-theme-light-text-primary};
