--- a/index.css
+++ b/index.css
@@ -33,6 +33,15 @@ h3 span {
   top: -100px;
 }
 
+h1 {
+  position: relative;
+}
+
+h1 span {
+  position: absolute;
+  top: -100px;
+}
+
 /* #################### Header Elements #################### */
 
 header,
