--- a/src/app.css
+++ b/src/app.css
@@ -1,20 +1,20 @@
-*, *::after, *::before {
-  box-sizing: border-box;
+*,
+*::after,
+*::before {
+	box-sizing: border-box;
 }
 
-html, body {
-        margin: 0;
-        padding: 0;
-        
-        min-height: 100vh;
+html,
+body {
+	margin: 0;
+	padding: 0;
 
-        font-family: 'Roboto', sans-serif;
+	min-height: 100vh;
+
+	font-family: 'Roboto', sans-serif;
 }
 
 body {
-        display: flex;
-        flex-direction: column;
-
-        justify-content: center;
-        align-items: center;
+	display: grid;
+	place-items: center;
 }
